k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rust-app
  labels:
    run: rust-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rust-app
